[package]
name = "ron"
version = "0.2.0"
authors = ["Clouds <leechau@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
