[package]
name = "ron"
version = "1.1.0"
authors = ["Clouds <leechau@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
glob = "0.3"
serde-pickle = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
